--- a/manifest.json
+++ b/manifest.json
@@ -1,101 +1,46 @@
 {
   "minecraft": {
-    "version": "1.17.1",
+    "version": "1.18.2",
     "modLoaders": [
       {
-        "id": "fabric-0.12.12",
+        "id": "fabric-0.13.3",
         "primary": true
       }
     ]
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "HBFR Fabric Modpack Sodium",
+  "name": "HBFR Sodium Fabric 1.18.2",
   "author": "",
   "files": [
     {
-      "projectID": 406343,
-      "fileID": 3565282,
-      "required": true
-    },
-    {
-      "projectID": 521427,
-      "fileID": 3609272,
-      "required": true
-    },
-    {
-      "projectID": 306612,
-      "fileID": 3609590,
-      "required": true
-    },
-    {
       "projectID": 433760,
-      "fileID": 3516262,
+      "fileID": 3523463,
       "required": true
     },
     {
-      "projectID": 441024,
-      "fileID": 3478093,
-      "required": true
-    },
-    {
-      "projectID": 399798,
-      "fileID": 3573934,
-      "required": true
-    },
-    {
-      "projectID": 354047,
-      "fileID": 3538853,
-      "required": true
-    },
-    {
-      "projectID": 308702,
-      "fileID": 3479750,
-      "required": true
-    },
-    {
-      "projectID": 394468,
-      "fileID": 3605275,
-      "required": true
-    },
-    {
-      "projectID": 286924,
-      "fileID": 3621649,
-      "required": true
-    },
-    {
-      "projectID": 531351,
-      "fileID": 3549414,
-      "required": true
-    },
-    {
-      "projectID": 280647,
-      "fileID": 3367098,
-      "required": true
-    },
-    {
-      "projectID": 409301,
-      "fileID": 3590923,
-      "required": true
-    },
-    {
-      "projectID": 452046,
-      "fileID": 3461725,
-      "required": true
-    },
-    {
-      "projectID": 401648,
-      "fileID": 3347660,
-      "required": true
-    },
-    {
-      "projectID": 333287,
-      "fileID": 3519863,
+      "projectID": 319057,
+      "fileID": 3641132,
       "required": true
     },
     {
       "projectID": 448233,
-      "fileID": 3388827,
+      "fileID": 3642143,
+      "required": true
+    },
+    {
+      "projectID": 399798,
+      "fileID": 3573935,
+      "required": true
+    },
+    {
+      "projectID": 459496,
+      "fileID": 3669436,
+      "required": true
+    },
+    {
+      "projectID": 392101,
+      "fileID": 3673233,
       "required": true
     },
     {
@@ -104,28 +49,73 @@
       "required": true
     },
     {
-      "projectID": 334259,
-      "fileID": 3548844,
+      "projectID": 354047,
+      "fileID": 3683180,
+      "required": true
+    },
+    {
+      "projectID": 306612,
+      "fileID": 3689020,
+      "required": true
+    },
+    {
+      "projectID": 333287,
+      "fileID": 3523461,
+      "required": true
+    },
+    {
+      "projectID": 286924,
+      "fileID": 3695976,
+      "required": true
+    },
+    {
+      "projectID": 308702,
+      "fileID": 3668801,
+      "required": true
+    },
+    {
+      "projectID": 521427,
+      "fileID": 3697502,
+      "required": true
+    },
+    {
+      "projectID": 394468,
+      "fileID": 3669187,
+      "required": true
+    },
+    {
+      "projectID": 531351,
+      "fileID": 3675822,
       "required": true
     },
     {
       "projectID": 455508,
-      "fileID": 3612854,
+      "fileID": 3687476,
       "required": true
     },
     {
-      "projectID": 319057,
-      "fileID": 3559636,
+      "projectID": 401648,
+      "fileID": 3667534,
       "required": true
     },
     {
-      "projectID": 423602,
-      "fileID": 3498010,
+      "projectID": 280647,
+      "fileID": 3367098,
       "required": true
     },
     {
-      "projectID": 459496,
-      "fileID": 3535202,
+      "projectID": 296468,
+      "fileID": 3692641,
+      "required": true
+    },
+    {
+      "projectID": 334259,
+      "fileID": 3671978,
+      "required": true
+    },
+    {
+      "projectID": 409301,
+      "fileID": 3686441,
       "required": true
     }
   ],
